Clean up upload UI